--- a/main.tex
+++ b/main.tex
@@ -32,6 +32,13 @@
 %\usepackage{subcaption}
 \usepackage[square,sort,comma,numbers]{natbib}
 \usepackage{listings}
+
+\lstset{
+  language=C,
+  basicstyle=\footnotesize\ttfamily,
+  columns=fullflexible
+}
+
 \usepackage{multirow}
 \usepackage[thinlines]{easytable}
 
@@ -116,9 +123,9 @@
 
 \titlerunning{Software Restoration}
 
-\author{Vladimir Janjic\inst{1} \and Adam Barwell\inst{1} \and Kevin Hammond\inst{1}}
+\author{Vladimir Janjic\inst{1} \and Christopher Brown\inst{1} \and Adam Barwell\inst{1} \and Kevin Hammond\inst{1}}
 
-\institute{School of Computer Science, University of St Andrews, Scotland, UK,\\ \email{\{vj32,adb23\}@st-andrews.ac.uk}, \email{kevin@kevinhammond.net}
+\institute{School of Computer Science, University of St Andrews, Scotland, UK,\\ \email{\{vj32,cmb21,adb23\}@st-andrews.ac.uk}, \email{kevin@kevinhammond.net}
 }
 
 \maketitle
@@ -164,12 +171,18 @@ Legacy-parallel code, written in ad-hoc way using low level parallel libraries s
 
 \subsection{Parallel Patterns (1/3 page)}
 \begin{itemize}
-\item What are paralell patterns
+\item What are parallel patterns
 \item Some common patterns
   \item Benefits of using patterns
   \item Relevant pattern libraries (Open MP, Intel TBB...)
 \end{itemize}
 
+In this paper, we take an approach where parallelism can be described using a high-level abstraction, known as a parallel pattern. A parallel pattern implements a common parallel behaviour, while abstracting over its implementation. 
+In this paper, we restrict ourselves to two classical parallel patterns, which we believe to be the most common. Note that the technique described in this paper can be further generalised to include the full tractable set of parallel patterns.
+\begin{itemize}
+    \item The farm pattern models a data parallel computation, where a single computational worker, $f$, is applied to a set of independent inputs, $x_{1}, ..., x_{n}$. The parallelism arises from applying the worker, $f$, to different input elements at the same time in parallel. 
+    \item The pipeline pattern models a parallel pipeline. Here, a sequence of functions, $f_{1}, f_{2}, ..., f_{m}$ are applied, to a stream on independent inputs, $x_{1}, ..., x_{n}$. The output of $f_{i}$ becomes the input to $f_{i+1}$, so that the parallelism arises from executing $f_{i+1}(f_{i}(...f_{1}(x_{k})...))$ in parallel with $f_{i}(f_{i-1}(...f_{1}(x_{k+1})...))$.
+\end{itemize}
 \subsection{Refactoring (1/3 page)}
 \begin{itemize}
 \item What is refactoring
@@ -188,17 +201,18 @@ Legacy-parallel code, written in ad-hoc way using low level parallel libraries s
 \emph{Software restoration} is a methodology based on refactoring and code analysis that aims to:
 \begin{itemize}
 \item discover instances of common patterns in legacy-parallel code;
-\item eliminate unstructurd parallelism from such code;
+\item eliminate unstructured parallelism from such code;
   \item replace the eliminated parallelism with structured code written using high-level parallel pattern libraries.
 \end{itemize}
 Three key technologies that software restoration is based are parallel patterns, software refactoring and code analysis, descrbied in Section~\ref{sec:background}. In the software restoration, code goes through different phases, from the original code, via \emph{clean} sequential code to structured parallel code. The overall process is depicted in Figure~\ref{fig:SoftRest} and it involves the following steps: 
 
 \begin{figure}
-  \begin{center}
-\includegraphics[scale=0.2]{images/SoftRest.png}
+\centering
+\begin{minipage}{0.99\textwidth}
+\includegraphics{images/SoftRest.png}
+\end{minipage}
 \caption{Software Restoration Process}
 \label{fig:SoftRest}
-  \end{center}
 \end {figure}
 
 \begin{itemize}
@@ -214,13 +228,492 @@ Three key technologies that software restoration is based are parallel patterns,
 \end{itemize}
 
 \section{Refactorings to Eliminate Parallelism} (2 pages)
+
+\subsection{Replace \lstinline|pthread_create| with a function call}
+
+This refactoring replaces a call to \lstinline|pthread_create| with a function call. Any arguments that were originally passed to the thread, are passed to the function instead. The return result of the function, originally captured as a variable argument to \lstinline|pthread_create| is assigned to the variable instead. Consider the following example.
+
+\begin{lstlisting}[frame=single]
+var = pthread_create(&thread, NULL, f, args);
+\end{lstlisting}
+
+\noindent
+is refactored into
+
+\begin{lstlisting}[frame=single]
+var = 0;
+f(args);
+\end{lstlisting}
+
+\noindent
+where, \texttt{var} is assigned \texttt{0} in lieu of the original return value of \lstinline|pthread_create| when the call is successful. The refactoring assumes that \lstinline|f| 
+%communicates with other threads via mutexes or semaphores, and 
+does not itself return a non-null value \emph{via} \lstinline|pthread_exit|. The refactoring can therefore only be applied when the body of \lstinline|f| contains only calls to \lstinline|pthread_exit| to which \lstinline|NULL| is passed as its argument. % \forall pthread_exit(var) \in f.statements.transclosure, var = NULL
+
+\emph{What if the call to \lstinline|pthread_create| is nested in some other statement or expression? Lift into a variable first, to get to the above example.}
+
+\subsection{Replace \lstinline|pthread_exit| with a return statement}
+
+This refactoring replaces a call to \lstinline|pthread_exit| with a return statement. The argument originally passed to \lstinline|pthread_exit| are instead passed to the return statement. Consider the following example.
+
+\begin{lstlisting}[frame=single]
+pthread_exit(var);
+\end{lstlisting}
+
+\noindent
+is refactored into
+
+\begin{lstlisting}[frame=single]
+return var;
+\end{lstlisting}
+
+\noindent
+where \lstinline|var| may either be a variable or \lstinline|NULL|. Unlike the refactorings that replace \lstinline|pthread_create| and \lstinline|pthread_join|, this refactoring does \emph{not} require \lstinline|var| to be \lstinline|NULL| since both cases can be refactored in the same way.
+
+%Note that whilst other refactorings defined herein, e.g.\ those replacing calls to \lstinline|pthread_create| and \lstinline|pthread_join|, assume that the spawned functions do \emph{not} return any value by \lstinline|pthread_exit| in order to simplify the decision of where the sequentialised function call should occur, there is no such limitation when replacing calls to \lstinline|pthread_exit| within .
+
+%Whilst this refactoring allows for spawned functions to return values \emph{via} \lstinline|pthread_exit| and \lstinline|pthread_join|, the other refactorings defined and used herein assume that only functions that 
+
+%\noindent
+\emph{Note that if \lstinline|var| \emph{isn't} \lstinline|NULL| then the result of the refactored \lstinline|pthread_create| needs to be captured. (Where? At the point of \lstinline|pthread_join|? At the point of \lstinline|pthread_create|?) Assume it only returns \lstinline|NULL| for consistency?}
+
+\subsection{Remove \lstinline|pthread_join|}
+
+This refactoring removes a call to \lstinline|pthread_join| when its second argument is \lstinline|NULL|; i.e.\ when it does \emph{not} expect a value to be returned from the exiting thread. As with \lstinline|pthread_create|, when the result of a call to \lstinline|pthread_join| is assigned to a variable, e.g.\
+
+\begin{lstlisting}[frame=single]
+var = pthread_join(thread, NULL);
+\end{lstlisting}
+
+\noindent
+the statement is refactored into the assignment:
+
+\begin{lstlisting}[frame=single]
+var = 0;
+\end{lstlisting}
+
+\noindent
+where \lstinline|0| is again the value returned by \lstinline|pthread_join| when it is successful. 
+
+\emph{Again, what happens when it's part of another statement (e.g.\ if-statement) or another expression? Lift into a variable and replace call sites with that variable. In which cases does the change in order of expressions affect the external behaviour?}
+
 \subsection{Farm Removal}
+
+\begin{itemize}
+\item Matrix Multiplication example
+  \begin{itemize}
+  \item \texttt{discovery-examples/matmult/matmult\_pthreads.cpp}
+  \end{itemize}
+\item Points of note
+  \begin{itemize}
+  \item Global
+    \begin{itemize}
+    \item \lstinline|#include <pthread.h>|
+    \item \lstinline|pthread_t *threads| (remove assignment in \lstinline|threads_create|)
+    \end{itemize}
+  \item \lstinline|main|
+    \begin{itemize}
+    \item \lstinline|pthread_join(NULL)|
+    \item \lstinline|pthread_exit(NULL)| (transform to: \lstinline|return(NULL)|)
+    \end{itemize}
+  \item \lstinline|threads_create|
+    \begin{itemize}
+    \item \lstinline|pthread_attr_t attr| (remove \lstinline|pthread_attr_init|, replace with \lstinline|status = 0| to satisfy the if-statement at line 105)
+    \item \lstinline|pthread_create| (rewrite to \lstinline|status=0;thread_func(threads[thread_ind])|)
+    \end{itemize}
+  \end{itemize}
+\end{itemize}
+
 \subsection{Pipeline Parallelism Removal}
+
+
+
+\subsubsection{Very Simple Example.}
+
+Simplified PGPry example (Listing~\ref{lst:simplepipeexample}). A two-stage pipeline with farms for the stages. An integer represents the (size of a) buffer between stages. Parallelism removal assumes perfect scheduling for the sequential version; practically, we do not see exactly the same behaviour for the sequential version as we do the parallel versions (for all runs of the parallel version).
+
+\paragraph{Refactoring stages.}
+\iffalse
+
+
+\begin{enumerate}
+\item In \lstinline|main|, remove farms over pipeline stages by removing the for loops surrounding them.
+\begin{lstlisting}[frame=single]
+for(i = 0; i < NUM_THREADS; i++) {
+  ...
+  rc = pthread_create(&threads[i], NULL, StageOne, arg);
+  ...
+}
+\end{lstlisting}
+Farms are for loops that contain a \lstinline|pthread_create| call. What if the for loops also calculate something else? Assume that a pragma indicating a farm stage is okay for transformation. Alpha renaming of local variables declared inside the loop body where necessary. Result of the above:
+\begin{lstlisting}[frame=single]
+...
+rc1 = pthread_create(&threads[i], NULL, StageOne, arg1);
+...
+\end{lstlisting}
+\item Still in \lstinline|main|, rewrite the \lstinline|pthread_create| calls as function calls.
+\begin{lstlisting}[frame=single]
+rc = 0;
+StageOne(arg1);
+\end{lstlisting}
+As before, since the result of \lstinline|StageOne| is assigned to a \lstinline|status|-type variable, here \lstinline|rc|, we assign the default positive result of \lstinline|pthread_create| to that variable before calling the spawned function, here \lstinline|StageOne|.
+\item 
+\end{enumerate}
+
+\fi
+
+\begin{enumerate}
+\item In \lstinline|main|, replace \lstinline|pthread_create| calls with an assignment to \lstinline|status| and a call to the spawned function. Ensures that \lstinline|status| is initialised for the subsequent uses of it; value assigned should be the default successful returned value of \lstinline|pthread_create| (here, that's \lstinline|0|).
+\begin{lstlisting}[frame=single]
+// status = pthread_create(&one, NULL, StageOne, NULL);
+status = 0;
+StageOne(0);
+if (status != 0) {
+  exit(-1);
+}
+\end{lstlisting}
+
+\item In \lstinline|main|, consider \lstinline|pthread_join| calls. Since these do not expect return values (i.e.\ second argument is \lstinline|NULL|), they can just be removed.
+
+\item Replace \lstinline|pthread_exit| calls with \lstinline|return NULL;|
+
+\item Unify stages; of interest: the for-loops. What sort of loops can we handle? Unification synthesises a new function, the body of which is the result of said unification. Arguments to this function are the concatenation of arguments to the original stage functions.
+  \begin{enumerate}
+  \item Unification of the conditions by disjunction. \emph{Suspect that the bodies of the separate loops need to be themselves in if-statements (with original conditions); otherwise may run stage code more often than expected.}
+  \begin{lstlisting}[frame=single]
+  // Stage One:
+  int i1;
+  for (i1 = 0; i1 < 5; i1++) {...}
+  // Stage Two:
+  int i2;
+  for (i2 = 0; i2 < 5; i2++) {...}
+  // Unifies to:
+  int i1;
+  int i2;
+  for (i1 = 0, i2 = 0; i1 < 5 || i2 < 5; i1++, i2++) {...}
+  \end{lstlisting}
+  
+  \item To begin with, unify from first stage. Pass through the first stage, followed by the second stage. Question of duplicating block code. Standard blocks of code before any \emph{read}/\emph{write} operation on the shared state can just be inserted.
+
+  \item Operations on the state can be matched accordingly. Match \emph{read} operations on the shared state with other \emph{read} and \emph{write} operations on the shared state. In the example, a \emph{read} is matched with a \emph{read}, resulting in picking the \emph{read} operation in the first stage; here, the assignment to \lstinline|loc_shared|.
+  \begin{lstlisting}[frame=single]
+  int i1;
+  int i2;
+  for (i1 = 0, i2 = 0; i1 < 5 || i2 < 5; i1++, i2++) {
+    int loc_shared = shared;
+    ...
+  }
+  \end{lstlisting}
+  Combinations (taken in order):
+  \begin{enumerate}
+  \item \emph{read/read}: pick stage one read
+  \item \emph{read/write}: replace \emph{read} RHS with \emph{write} (stage two assignment)
+  \item \emph{write/read}: replace \emph{read} RHS with \emph{write} (stage one assignment)
+  \item \emph{write/write}: pick stage one write
+  \end{enumerate}
+  \emph{These need checking.} Alpha-rename as necessary.
+  
+  \item Block code from the first stage is inserted since it has no impact on the shared state.
+  \begin{lstlisting}[frame=single]
+  int i1;
+  int i2;
+  for (i1 = 0, i2 = 0; i1 < 5 || i2 < 5; i1++, i2++) {
+    int loc_shared1 = shared;
+    sleep(1); // representing block code
+    ...
+  }
+  \end{lstlisting}
+  
+  \item A \emph{write} operation in the first stage is matched with another \emph{write} operation in the second stage. Use the \emph{write} operation from the first stage. \emph{Are we really unifying here? We seem to be just placing stage two after stage one in a new for loop\dots}
+  \begin{lstlisting}[frame=single]
+  int i1;
+  int i2;
+  for (i1 = 0, i2 = 0; i1 < 5 || i2 < 5; i1++, i2++) {
+    int loc_shared1 = shared;
+    sleep(1); // representing block code
+    shared = loc_shared1++;
+    printf("(1-%i) shared = %i\n", i1, shared);
+    ...
+  }
+  \end{lstlisting}
+  
+  \item End of \lstinline|StageOne|, start with \lstinline|StageTwo|;
+    \begin{enumerate}
+    \item \emph{read/read};
+    \item block code;
+    \item \emph{write/write};
+    \end{enumerate}
+  \begin{lstlisting}[frame=single]
+  int i1;
+  int i2;
+  for (i1 = 0, i2 = 0; i1 < 5 || i2 < 5; i1++, i2++) {
+    int loc_shared1 = shared;
+    sleep(1); // representing block code
+    shared = loc_shared1++;
+    printf("(1-%i) shared = %i\n", i1, shared);  
+   
+    int loc_shared2 = shared;
+    sleep(1); // representing block code
+    shared = loc_shared2--;
+    printf("(2-%i) shared = %i\n", i2, shared);
+  }
+  \end{lstlisting}
+    
+  \item \lstinline|return NULL;| statements are the same in both stages.
+  \begin{lstlisting}[frame=single]
+  int i1;
+  int i2;
+  for (i1 = 0, i2 = 0; i1 < 5 || i2 < 5; i1++, i2++) {
+    int loc_shared1 = shared;
+    sleep(1); // representing block code
+    shared = loc_shared1++;
+    printf("(1-%i) shared = %i\n", i1, shared);  
+   
+    int loc_shared2 = shared;
+    sleep(1); // representing block code
+    shared = loc_shared2--;
+    printf("(2-%i) shared = %i\n", i2, shared);
+  }
+  return NULL;
+  \end{lstlisting}
+  
+  \item In \lstinline|main|, the synthesised function is called in place of the last pipeline stage.
+  \begin{lstlisting}[frame=single]
+  int main () {
+    int status;
+  
+    // Stage One
+    status = 0;
+    // StageOne(NULL);
+    if (status != 0) {
+      exit(-1);
+    }
+  
+    // Stage Two
+    status = 0;
+    // StageTwo(NULL);
+    SynthesisedPipe(NULL, NULL); // StageOne and StageTwo combined.
+    if (status != 0) {
+      exit(-1);
+    }
+  
+    return 0;
+  }
+  \end{lstlisting}
+  \end{enumerate}
+
+\item Make global variables local for the synthesised function. Synthesised function needs to take additional arguments that are the global variables used within the function, and needs to return a tuple, i.e.\ \lstinline|struct|, of the global variables. The returned values of the global variables are then reassigned to their respective globals.
+\begin{lstlisting}[frame=single]
+int main() {
+  ...
+  struct pipe_result = SynthesisedPipe(NULL, NULL, shared);
+  shared = pipe_result.shared;
+  ...
+}
+\end{lstlisting}
+The \lstinline|struct| can be automatically generated itself, where the fields are all free variables (i.e.\ the globals) in the synthesised function.
+
+\item Split into separate worker functions for pipeline introduction via Grppi refactorings. \emph{Were the pipeline refactorings ever published?}
+\begin{lstlisting}[frame=single]
+void* SynthesisedPipe(void* threadarg1, void* threadarg2, int shared) {
+  int i1;
+  int i2;
+  for (i1 = 0, i2 = 0; i1 < 5 || i2 < 5; i1++, i2++) {
+    // Stage One
+    int loc_shared1 = shared;
+    sleep(1); // representing block code
+    shared = loc_shared1++;
+    printf("(1-%i) shared = %i\n", i1, shared);  
+   
+    // Stage Two
+    int loc_shared2 = shared;
+    sleep(1); // representing block code
+    shared = loc_shared2--;
+    printf("(2-%i) shared = %i\n", i2, shared);
+  }
+  return NULL;
+}
+\end{lstlisting}
+Each pipeline stage needs to be lifted into a new function. This is a standard refactoring found in IDEs etc.\ 
+\begin{lstlisting}[frame=single]
+
+struct tuple1 {int i1; int shared;};
+
+tuple1 S1(int i1, int shared) {
+  int loc_shared1 = shared;
+  sleep(1); // representing block code
+  shared = loc_shared1++;
+  printf("(1-%i) shared = %i\n", i1, shared);  
+  
+  tuple1 ret = {.i1 = i1, .shared=shared};
+  return ret;
+}
+
+struct tuple2 {int i2; int shared;};
+
+tuple2 S2(int i2, int shared) {
+  int loc_shared2 = shared;
+  sleep(1); // representing block code
+  shared = loc_shared2--;
+  printf("(2-%i) shared = %i\n", i2, shared);
+  
+  tuple1 ret = {.i1 = i1, .shared=shared};
+  return ret;
+}
+
+void* SynthesisedPipe(void* threadarg1, void* threadarg2, int shared) {
+  int i1;
+  int i2;
+  for (i1 = 0, i2 = 0; i1 < 5 || i2 < 5; i1++, i2++) {
+    tuple1 ret1 = S1(i1, shared);
+    i1 = ret1.i1;
+    shared = ret1.shared;
+   
+    tuple2 ret2 = S2(i2, shared);
+    i2 = ret2.i2;
+    shared = ret2.shared;
+  }
+  return NULL;
+}
+\end{lstlisting}
+Inputs to lifted functions are all free variables in the body; functions return a tuple (really a \lstinline|struct|, automatically derived) containing (possibly) updated values of the stage inputs. These are updated in the for-loop after the call to the relevant stage. \emph{Presumably possible to skip the stages where you put them in the for-loop and then take  them out again, and go straight to lifting them into functions?}
+
+\item Introduce GrPPI pragmas for pipeline stages.
+\begin{lstlisting}[frame=single]
+void* SynthesisedPipe(void* threadarg1, void* threadarg2, int shared) {
+  int i1;
+  int i2;
+  for (i1 = 0, i2 = 0; i1 < 5 || i2 < 5; i1++, i2++) {
+    #pragma grppi seq stage
+    tuple1 ret1 = S1(i1, shared);
+    i1 = ret1.i1;
+    shared = ret1.shared;
+   
+    #pragma grppi seq stage
+    tuple2 ret2 = S2(i2, shared);
+    i2 = ret2.i2;
+    shared = ret2.shared;
+  }
+  return NULL;
+}
+\end{lstlisting}
+
+\item Call the Eclipse refactorings on the for-loop. \emph{Check these, and output, on your laptop's Mac VM.}
+\end{enumerate}
+
+\subsubsection{List of Refactorings Used/Needed}
+
+\begin{enumerate}
+\item Replace \lstinline|x = pthread_create(...,f,arg);| with \lstinline|x = 0; f(arg);|
+\item Remove \lstinline|pthread_join(NULL)|
+\item Replace \lstinline|pthread_exit(NULL)| with \lstinline|return NULL;|
+\item Unify Stages.
+  \begin{itemize}
+  \item Unify block statements.
+    \begin{itemize}
+    \item Definition of block statement? Not a loop? Presume to be an initialisation?
+    \item Include both. 
+    \end{itemize}
+  \item Unify return statements.
+  \item Unify loops. (For, While, specific form?)
+    \begin{itemize}
+    \item For-loop, standard iteration. (Not just less-than and increment.)
+    \begin{lstlisting}[frame=single]
+// Stage One
+for(x1 = y1; x1 < y2; x1++) {...}
+// Stage Two
+for(x2 = z1; x2 < z2; x2++) {...}
+    \end{lstlisting}
+    Initialisation and increment parts are stringed together with a comma; resulting condition is the disjunction of the original conditions.
+    \begin{lstlisting}[frame=single]
+for(x1 = y1, x2 = z1; x1 < y2 || x2 < z2; x1++, x2++) {...}
+    \end{lstlisting}
+    \end{itemize}
+  \end{itemize}
+\end{enumerate}
+
 
 \section{Evaluation} (4 pages)
 
 \section{Conclusions and future work} \label{sec:Conclusions} (1.5 page, with references)
 In this abstract, we have outlined the software restoration methodology for converting legacy-parallel applications into structured parallel code using parallel patterns. This ensures portability, maintainability and adaptivity of parallel code while maintaining, and sometimes even increasing, performance. In the full version of this paper, we will also present refactorings to eliminate ad-hoc pthread parallelism from the legacy-parallel code, which is a first step in the proposed methodology of software restoration. Furthermore, we will evaluate software restoration on a number of realistic benchmarks and use-cases, doing parallelism removal automatically and other steps manually, and demonstrating benefit in terms of gained performance, increased adaptivity, portability and maintainability.
+
+\appendix
+\section{Simple Pipeline Example}
+
+\begin{lstlisting}[frame=single,numbers=left,label=lst:simplepipeexample,caption=Simple pipeline example.]
+#include <stdlib.h>
+#include <stdio.h>
+#include <pthread.h>
+
+#include <unistd.h>
+
+pthread_t one;
+pthread_t two;
+
+int shared = 0;
+pthread_mutex_t mut;
+
+void *StageOne(void *threadarg1) {
+  for (int i1 = 0; i1 < 5; i1++) {
+    // Read shared
+    pthread_mutex_lock(&mut);
+    int loc_shared = shared;
+    pthread_mutex_unlock(&mut);
+
+    sleep(1);
+
+    // Update shared
+    pthread_mutex_lock(&mut);
+    shared = loc_shared++;
+    printf("(1-%i) shared = %i\n", i1, shared);
+    pthread_mutex_unlock(&mut);
+  }
+  
+  pthread_exit(NULL);
+}
+
+void *StageTwo(void *threadarg2) {
+  for (int i2 = 0; i2 < 5; i2++) { // Needs an EOS...
+    // Read shared
+    pthread_mutex_lock(&mut);
+    int loc_shared = shared;
+    pthread_mutex_unlock(&mut);
+
+    sleep(1);
+
+    // Update shared
+    pthread_mutex_lock(&mut);
+    shared = loc_shared--;
+    printf("(2-%i) shared = %i\n", i2, shared);
+    pthread_mutex_unlock(&mut);
+  }
+
+  pthread_exit(NULL);
+}
+
+int main () {
+  int status;
+
+  // Stage One
+  status = pthread_create(&one, NULL, StageOne, NULL);
+  if (status != 0) {
+    exit(-1);
+  }
+
+  // Stage Two
+  status = pthread_create(&two, NULL, StageTwo, NULL);
+  if (status != 0) {
+    exit(-1);
+  }
+
+  pthread_join(one, NULL);
+  pthread_join(two, NULL);
+
+  return 0;
+}
+}
+\end{lstlisting}
 
 
 
